--- a/restaurant_website/assets/scss/footer.scss
+++ b/restaurant_website/assets/scss/footer.scss
@@ -5,6 +5,75 @@ footer {
   background: rgb(0,0,0);
   display: flex;
   justify-content: space-between;
+  .email-signup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0,0,0,.9);
+    z-index: 20;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    animation: show .4s 1;
+    animation-play-state: paused;
+    animation-fill-mode: forwards;
+     transform:scale(0.5);
+    opacity: 0;
+      @keyframes show {
+        0% {opacity: 0; transform:scale(0.5); }
+        100% {opacity: 1; transform:scale(1.01); }
+      }
+     form {
+       width: 35%;
+        h2 {
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: bold;
+          font-size: 1.4em;
+          color: #fff;
+          margin-bottom: 10px;
+        }
+        input {
+          width: 100%;
+          height: 45px;
+          margin-top: 20px;
+          font-family: $font;
+          padding-left: 10px;
+        }
+        button {
+          background: transparent;
+          margin-top: 20px;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          border-radius: 3px;
+          color: #fff;
+          @include goldButton;
+           &:hover {
+             @include buttonTransition;
+           }
+        }
+        .close-icon {
+          position: absolute;
+          top: 15%;
+          right: 20%;
+          cursor: pointer;
+           i {
+             font-size: 2.5em;
+           }
+        }
+     }
+     .input-errors {
+       color: $gold;
+       width: 100%;
+       display: block;
+       text-align: right;
+       margin: 3px;
+       font-size: .8em;
+     }
+  }
    .mobile-footer {
      display: none;
    }
