--- a/restaurant_website/public/assets/css/footer.css
+++ b/restaurant_website/public/assets/css/footer.css
@@ -5,6 +5,95 @@ footer {
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between; }
+  footer .email-signup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 20;
+    display: none;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-animation: show .4s 1;
+    animation: show .4s 1;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    opacity: 0; }
+
+@-webkit-keyframes show {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5); }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01); } }
+
+@keyframes show {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5); }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01); } }
+    footer .email-signup form {
+      width: 35%; }
+      footer .email-signup form h2 {
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 1.4em;
+        color: #fff;
+        margin-bottom: 10px; }
+      footer .email-signup form input {
+        width: 100%;
+        height: 45px;
+        margin-top: 20px;
+        font-family: "Catamaran", sans-serif;
+        padding-left: 10px; }
+      footer .email-signup form button {
+        background: transparent;
+        margin-top: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 3px;
+        color: #fff;
+        padding: 6px 14px;
+        border: 2px solid #917952;
+        font-size: 15px;
+        text-transform: uppercase;
+        -webkit-transition: .5s border;
+        transition: .5s border; }
+        footer .email-signup form button:hover {
+          outline: 2px solid #fff;
+          border: 2px solid transparent;
+          outline-offset: .5px; }
+      footer .email-signup form .close-icon {
+        position: absolute;
+        top: 15%;
+        right: 20%;
+        cursor: pointer; }
+        footer .email-signup form .close-icon i {
+          font-size: 2.5em; }
+    footer .email-signup .input-errors {
+      color: #917952;
+      width: 100%;
+      display: block;
+      text-align: right;
+      margin: 3px;
+      font-size: .8em; }
   footer .mobile-footer {
     display: none; }
   footer .social-net {
